[package]
name = "sensor_backend_mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2.7", features = ["tokio-runtime"] }
anyhow = "1"
bson = "2.15.0"
dotenvy = "0.15.7"


